# pdeck

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  targets-mixed.txt  targets.txt
.github/workflows/: build.yml
src/: cli.rs  config.rs  live.rs  log.rs  main.rs  model.rs  probe.rs  record.rs  replay.rs  stats.rs  ui.rs
tests/fixtures/: replay_cross_platform.jsonl
